small version to 001 try to convert UI from cn to TW

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "expo-system-ui": "~3.0.6",
     "expo-web-browser": "~13.0.3",
     "lucide-react-native": "^0.523.0",
-    "opencc-js": "^1.0.5", 
+    "opencc-js": "^1.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "npm:react-native-tvos@~0.74.2-0",
@@ -53,6 +53,7 @@
     "react-native-file-viewer": "^2.1.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-localize": "^3.6.0",
     "react-native-media-console": "*",
     "react-native-qrcode-svg": "^6.3.1",
     "react-native-reanimated": "~3.10.1",
