--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "OrionTV",
   "private": true,
   "main": "expo-router/entry",
-  "version": "1.3.11.001",
+  "version": "1.3.11.002",
   "scripts": {
     "start": "EXPO_TV=1 EXPO_USE_METRO_WORKSPACE_ROOT=1 expo start",
     "android": "EXPO_TV=1 EXPO_USE_METRO_WORKSPACE_ROOT=1 expo run:android",
@@ -69,6 +69,7 @@
     "@babel/core": "^7.20.0",
     "@react-native-tvos/config-tv": "^0.0.10",
     "@types/jest": "^29.5.12",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
     "babel-plugin-transform-remove-console": "^6.9.4",
