--- a/.github/workflows/build-apk-p.yml
+++ b/.github/workflows/build-apk-p.yml
@@ -54,6 +54,15 @@ jobs:
           jq ".version = \"${VERSION}\"" package.json > tmp.json && mv tmp.json package.json
           echo "Updated package.json version to ${VERSION}"
 
+      - name: Commit updated package.json version
+        if: ${{ github.event.inputs.custom_version != '' }}
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add package.json
+          git commit -m "chore: bump version to ${{ github.event.inputs.custom_version }}"
+          git push
+
       - name: Confirm updated package.json version
         run: cat package.json | grep version
 
