update workflows file for auto commit & repo package.json version when define by user in workflows build time

--- a/.github/workflows/build-apk-p.yml
+++ b/.github/workflows/build-apk-p.yml
@@ -79,15 +79,20 @@ jobs:
         run: |
           VERSION="${{ steps.package-version.outputs.version }}"
           CODE=$(echo "$VERSION" | awk -F. '{ printf "%d%03d%03d", $1, $2, $3 }')
-          sed -i "s/versionCode .*/versionCode ${CODE}/" android/app/build.gradle
-          sed -i "s/versionName \".*\"/versionName \"${VERSION}\"/" android/app/build.gradle
+          sed -i "s/versionCode .*/versionCode ${CODE}/" android/app/build.gradle || true
+          sed -i "s/versionName \".*\"/versionName \"${VERSION}\"/" android/app/build.gradle || true
           echo "Updated build.gradle versionCode=${CODE}, versionName=${VERSION}"
 
       - name: Build TV APK
         run: |
           if [ "${{ github.event.inputs.buildMode }}" = "full" ]; then
-            yarn clean && yarn build
+            echo "Running full clean build..."
+            rm -rf node_modules
+            yarn cache clean
+            yarn install --frozen-lockfile
+            yarn build
           else
+            echo "Running incremental build..."
             yarn build
           fi
 
