--- a/.github/workflows/build-apk-p.yml
+++ b/.github/workflows/build-apk-p.yml
@@ -60,8 +60,12 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add package.json
-          git commit -m "chore: bump version to ${{ github.event.inputs.custom_version }}"
-          git push
+          if ! git diff --cached --quiet; then
+            git commit -m "chore: bump version to ${{ github.event.inputs.custom_version }}"
+            git push
+          else
+            echo "No changes to commit, skipping push."
+          fi
 
       - name: Confirm updated package.json version
         run: cat package.json | grep version
