update workflows file for auto commit & repo package.json version when define by user in workflows build time

--- a/.github/workflows/build-apk-p.yml
+++ b/.github/workflows/build-apk-p.yml
@@ -9,7 +9,7 @@ on:
       buildMode:
         description: "選擇建置模式 (full=clean build / incremental=只重建變更部分)"
         required: true
-        default: "incremental"
+        default: "full"   #Deafault full
         type: choice
         options:
           - full
