fix: enable build-apk-p workflow on tag push

--- a/.github/workflows/build-apk-p.yml
+++ b/.github/workflows/build-apk-p.yml
@@ -1,6 +1,10 @@
 name: Build Android APK Personal
 
 on:
+  on:
+  push:
+    tags:
+      - 'v*'
   workflow_dispatch:
     inputs:
       custom_version:
