--- a/package.json
+++ b/package.json
@@ -76,8 +76,7 @@
     "eslint-config-expo": "~7.1.2",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.1",
-    "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
+    "react-test-renderer": "18.2.0"
   },
   "expo": {
     "install": {
