--- a/.github/workflows/build-apk-p.yml
+++ b/.github/workflows/build-apk-p.yml
@@ -31,9 +31,6 @@ permissions:
 
 jobs:
   release_build:
-    # ✅ 僅允許兩種觸發：
-    # 1) dev 分支 push
-    # 2) workflow_dispatch（手動）且 buildTarget 為 dev 或 tag
     if: |
       (github.event_name == 'push' && github.ref == 'refs/heads/dev') ||
       (github.event_name == 'workflow_dispatch')
@@ -47,7 +44,6 @@ jobs:
             echo "ERROR: tag build requires 'custom_version' (e.g., 1.3.11.004)"
             exit 1
           fi
-          # 檢查 tag 是否存在於遠端
           TAG="v${{ github.event.inputs.custom_version }}"
           if ! git ls-remote --tags origin | grep -q "refs/tags/${TAG}$"; then
             echo "ERROR: Tag ${TAG} not found on remote."
@@ -58,10 +54,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          # ✅ 三種情境的 checkout ref：
-          # - dev push: 自動使用 dev
-          # - workflow_dispatch + dev: 使用 dev
-          # - workflow_dispatch + tag: 使用指定 tag（refs/tags/vX.Y.Z.xxx）
           ref: ${{ github.event_name == 'push' && 'dev' || (github.event.inputs.buildTarget == 'dev' && 'dev' || format('refs/tags/v{0}', github.event.inputs.custom_version)) }}
 
       - name: Set up Node.js
@@ -116,26 +108,24 @@ jobs:
             yarn build
           fi
 
-      - name: Rename APK file with buildTarget
+      - name: Rename APK file with version (tag aligned)
         run: |
           mkdir -p artifacts
-          TARGET="${{ github.event_name == 'push' && 'dev' || github.event.inputs.buildTarget }}"
           VERSION="${{ steps.package-version.outputs.version }}"
-          cp android/app/build/outputs/apk/release/app-release.apk \
-             "artifacts/orionTV.${TARGET}-${VERSION}.apk"
-          echo "APK prepared: artifacts/orionTV.${TARGET}-${VERSION}.apk"
+          cp android/app/build/outputs/apk/release/app-release.apk "artifacts/${VERSION}.apk"
+          echo "APK prepared: artifacts/${VERSION}.apk"
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
-          name: orionTV-${{ github.event_name == 'push' && 'dev' || github.event.inputs.buildTarget }}-${{ steps.package-version.outputs.version }}
-          path: artifacts/orionTV.${{ github.event_name == 'push' && 'dev' || github.event.inputs.buildTarget }}-${{ steps.package-version.outputs.version }}.apk
+          name: ${{ steps.package-version.outputs.version }}
+          path: artifacts/${{ steps.package-version.outputs.version }}.apk
           retention-days: 7
 
       - name: Check APK version info
         run: |
           sudo apt-get update && sudo apt-get install -y aapt
-          aapt dump badging "artifacts/orionTV.${{ github.event_name == 'push' && 'dev' || github.event.inputs.buildTarget }}-${{ steps.package-version.outputs.version }}.apk" | grep version
+          aapt dump badging "artifacts/${{ steps.package-version.outputs.version }}.apk" | grep version
 
       - name: Create Release and Upload APK
         uses: softprops/action-gh-release@v2
@@ -150,6 +140,6 @@ jobs:
             This build includes the small version .xxx(001-999) suffix for personal/internal use.
           draft: false
           prerelease: false
-          files: artifacts/orionTV.${{ github.event_name == 'push' && 'dev' || github.event.inputs.buildTarget }}-${{ steps.package-version.outputs.version }}.apk
+          files: artifacts/${{ steps.package-version.outputs.version }}.apk
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
