udpate workflows auto build support item

--- a/.github/workflows/build-apk-p.yml
+++ b/.github/workflows/build-apk-p.yml
@@ -7,7 +7,7 @@ on:
       - main
       - dev
       - "*"        # 其它分支也能觸發
-    tags-ignore:   # 🚫 忽略所有 tag push
+    tags-ignore:   # 忽略所有 tag push
       - '**'
   workflow_dispatch:
     inputs:
