--- a/.github/workflows/build-apk-p.yml
+++ b/.github/workflows/build-apk-p.yml
@@ -39,7 +39,8 @@ jobs:
       USER_NAME: ${{ github.repository_owner }}
       REPO_NAME: ${{ github.event.repository.name }}
       BRANCH_NAME: ${{ github.ref_name }}
-      GITHUB_RAW_URL: https://ghfast.top/https://raw.githubusercontent.com/${{ github.repository_owner }}/${{ github.event.repository.name }}/${{ github.ref_name }}/package.json?t=${{ github.run_id }}
+      # 保持和 UpdateConfig.ts 一樣的拼接方式，標點完全一致
+      GITHUB_RAW_URL: https://ghfast.top/https://raw.githubusercontent.com/${{ github.repository_owner }}/${{ github.event.repository.name }}/${{ github.ref_name }}/package.json?t=${{ github.run_id }},
 
     steps:
       - name: Validate inputs for tag builds
@@ -61,11 +62,22 @@ jobs:
         with:
           ref: ${{ github.ref }}
 
-      - name: Show dynamic RAW URL
+      - name: Show dynamic RAW URL and APK URL
         run: |
           echo "Repo: $USER_NAME/$REPO_NAME"
           echo "Branch: $BRANCH_NAME"
           echo "RAW URL: $GITHUB_RAW_URL"
+
+          VERSION=$(node -p "require('./package.json').version")
+          SAFE_BRANCH=$(echo "$BRANCH_NAME" | sed 's/[^a-zA-Z0-9-_]/-/g')
+          if [ "$BRANCH_NAME" = "main" ] || [ "$BRANCH_NAME" = "master" ]; then
+            SUFFIX=""
+          else
+            SUFFIX="-$SAFE_BRANCH"
+          fi
+
+          APK_URL="https://ghfast.top/https://github.com/$USER_NAME/$REPO_NAME/releases/download/v${VERSION}${SUFFIX}/orionTV.${VERSION}${SUFFIX}.apk"
+          echo "APK URL: $APK_URL"
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -101,14 +113,12 @@ jobs:
       - name: Update Android versionCode and versionName
         run: |
           VERSION="${{ steps.package-version.outputs.version }}"
-          # 將版本號轉換為 versionCode (例如 1.3.11.004 -> 1003011004)
           CODE=$(echo "$VERSION" | awk -F. '{ printf "%d%03d%03d%03d", $1, $2, $3, $4 }')
           sed -i "s/versionCode .*/versionCode ${CODE}/" android/app/build.gradle || true
           sed -i "s/versionName \".*\"/versionName \"${VERSION}\"/" android/app/build.gradle || true
           echo "Updated build.gradle versionCode=${CODE}, versionName=${VERSION}"
 
       - name: Build TV APK
-        # 💥 關鍵修改：明確將環境變數導出給 yarn build，確保應用程式程式碼能讀取 process.env
         run: |
           export USER_NAME=${{ env.USER_NAME }}
           export REPO_NAME=${{ env.REPO_NAME }}
@@ -130,11 +140,11 @@ jobs:
         run: |
           mkdir -p artifacts
           VERSION="${{ steps.package-version.outputs.version }}"
-          BRANCH="${BRANCH_NAME//\//-}"    # 把斜線轉成 -，與 UPDATE_CONFIG 的 safeBranch 邏輯一致
+          BRANCH="${BRANCH_NAME//\//-}"
           if [ "$BRANCH" = "main" ] || [ "$BRANCH" = "master" ]; then
             FINAL_VERSION="${VERSION}"
           else
-            FINAL_VERSION="${VERSION}-${BRANCH}" # 加上分支後綴
+            FINAL_VERSION="${VERSION}-${BRANCH}"
           fi
           cp android/app/build/outputs/apk/release/app-release.apk "artifacts/orionTV.${FINAL_VERSION}.apk"
           echo "apk_version=${FINAL_VERSION}" >> $GITHUB_OUTPUT
@@ -155,7 +165,7 @@ jobs:
       - name: Create Release and Upload APK
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: v${{ steps.rename-apk.outputs.apk_version }} # 使用動態 tag
+          tag_name: v${{ steps.rename-apk.outputs.apk_version }}
           name: Release v${{ steps.rename-apk.outputs.apk_version }}
           body: |
             Automated release for version v${{ steps.rename-apk.outputs.apk_version }}.
