--- a/.github/workflows/build-apk-p.yml
+++ b/.github/workflows/build-apk-p.yml
@@ -39,8 +39,7 @@ jobs:
       USER_NAME: ${{ github.repository_owner }}
       REPO_NAME: ${{ github.event.repository.name }}
       BRANCH_NAME: ${{ github.ref_name }}
-      # 保持和 UpdateConfig.ts 一樣的拼接方式，標點完全一致
-      GITHUB_RAW_URL: https://ghfast.top/https://raw.githubusercontent.com/${{ github.repository_owner }}/${{ github.event.repository.name }}/${{ github.ref_name }}/package.json?t=${{ github.run_id }},
+      GITHUB_RAW_URL: https://ghfast.top/https://raw.githubusercontent.com/${{ github.repository_owner }}/${{ github.event.repository.name }}/${{ github.ref_name }}/package.json?t=${{ github.run_id }}
 
     steps:
       - name: Validate inputs for tag builds
@@ -69,7 +68,7 @@ jobs:
           echo "RAW URL: $GITHUB_RAW_URL"
 
           VERSION=$(node -p "require('./package.json').version")
-          SAFE_BRANCH=$(echo "$BRANCH_NAME" | sed 's/[^a-zA-Z0-9-_]/-/g')
+          SAFE_BRANCH=$(echo "$BRANCH_NAME" | sed 's/[^a-zA-Z0-9_-]/-/g')
           if [ "$BRANCH_NAME" = "main" ] || [ "$BRANCH_NAME" = "master" ]; then
             SUFFIX=""
           else
